fix outside menu click behind header

--- a/src/style.css
+++ b/src/style.css
@@ -163,6 +163,7 @@ input:not([type="checkbox"]):focus {
   left: 0;
   width: 100vw;
   height: 100vh;
+  z-index: 1;
 }
 
 #menu .project-title {
